fixed issue with disabling buttons

--- a/demo/components/demo/user-interface/button/button.html
+++ b/demo/components/demo/user-interface/button/button.html
@@ -74,6 +74,18 @@
     </div>
 
     <p class="lead">
+        Disabled Buttons
+    </p>
+
+    <div class="button-sizes">
+        <!-- Normal buttons -->
+        <bw-button color="white" title="Large" size="lg" [disabled]="true"></bw-button>
+        <bw-button color="blue" title="Default" size="default" [disabled]="true"></bw-button>
+        <bw-button color="cyan" title="Small" size="sm" [disabled]="true"></bw-button>
+        <bw-button color="green" title="Tiny" size="xs" [disabled]="true"></bw-button>
+    </div>
+
+    <p class="lead">
         Block Buttons
     </p>
 
