fixed issue with disabling buttons

--- a/src/forms/input-base/input-base.component.pug
+++ b/src/forms/input-base/input-base.component.pug
@@ -17,7 +17,7 @@ include ../../mixins/base.pug
             [type]="inputType",
             placeholder="{{placeholder}}",
             [formControl]="control",
-            [attr.disabled]="disabled",
+            [disabled]="disabled",
             (focus)="onFocus(i)",
             (blur)="onBlur(i)")
 
