--- a/src/forms/toggle/toggle.component.pug
+++ b/src/forms/toggle/toggle.component.pug
@@ -4,6 +4,6 @@
         [attr.id]="identifier",
         type='checkbox',
         hidden='hidden',
-        [attr.disabled]="disabled",
+        [disabled]="disabled",
         [formControl]="control")
     label.ts-helper([attr.for]='identifier')
