--- a/demo/components/demo/forms/checkbox/checkbox.html
+++ b/demo/components/demo/forms/checkbox/checkbox.html
@@ -7,7 +7,7 @@
     <div class="row m-t-35">
         <div class="col-xs-12 col-sm-4">
             <!-- Normal Checkbox -->
-            <checkbox [fg]="fg" field="toggle1" label="Simple Checkbox"></checkbox>
+            <checkbox [fg]="fg" field="toggle1" label="Simple Checkbox" [disabled]="false"></checkbox>
         </div>
         <div class="col-xs-12 col-sm-4">
             <!-- Disabled Checkbox -->
