--- a/src/forms/checkbox/checkbox.component.pug
+++ b/src/forms/checkbox/checkbox.component.pug
@@ -1,5 +1,5 @@
 .checkbox.m-b-25([class.fc-alt]="alt")
     label
-        input.form-control(type="checkbox", [formControl]="control", [attr.disabled]="disabled")
+        input.form-control(type="checkbox", [formControl]="control", [disabled]="disabled")
         i.input-helper
         | {{label}}
