--- a/src/forms/datetime-picker/date-time-picker.component.pug
+++ b/src/forms/datetime-picker/date-time-picker.component.pug
@@ -7,7 +7,7 @@
             [type]="inputType",
             placeholder="{{placeholder}}",
             [formControl]="control",
-            [attr.disabled]="disabled",
+            [disabled]="disabled",
             (focus)="onFocus(i); showDatetimePicker($event)",
             (blur)="onBlur(i)",
             (click)="preventDefault($event)",
