--- a/src/user-interface/app-header/app-header.component.pug
+++ b/src/user-interface/app-header/app-header.component.pug
@@ -1,12 +1,12 @@
 header#header.clearfix.animated.slideInDown([attr.data-current-skin]='color')
     ul.header-inner
         // menu trigger
-        li#menu-trigger([attr.data-trigger]="'#sidebar'", *ngIf="addMenuTrigger && !goBackActive", [class.open]="sidebarOpen", (click)="toggleSidebar()")
+        li#menu-trigger([attr.data-trigger]="'#sidebar'", *ngIf="addMenuTrigger && !backActive", [class.open]="sidebarOpen", (click)="toggleSidebar()")
             .line-wrap
                 .line.top
                 .line.center
                 .line.bottom
-        li#menu-trigger.open(*ngIf="goBackActive", (click)="goBack()")
+        li#menu-trigger(*ngIf="backActive", (click)="backActionClicked()", [class.open]="backActive")
             .line-wrap
                 .line.top
                 .line.center
