supporting value initialization

--- a/demo/components/demo/forms/date-time-picker/date-time-picker.html
+++ b/demo/components/demo/forms/date-time-picker/date-time-picker.html
@@ -5,7 +5,7 @@
     </pre>
 
     <div>
-        <date-time-picker [fg]="fg" field="birthday"></date-time-picker>
+        <date-time-picker [fg]="fg" field="birthday" [value]="today"></date-time-picker>
     </div>
 
     
