--- a/demo/app.jade
+++ b/demo/app.jade
@@ -5,7 +5,7 @@ app-header(color="blue",
     (onActionClicked)="onActionClicked($event)",
     [actions]="headerActions")
 
-sidebar([open]="open")
+sidebar([open]="open", [fullHeight]="true")
     img.w-100(src="./img/angular-logo2.png")
     side-menu([items]="menuItems",
     (itemClicked)="onItemClicked($event)")
