added alt input to side menu

--- a/demo/components/demo/user-interface/side-menu/side-menu.html
+++ b/demo/components/demo/user-interface/side-menu/side-menu.html
@@ -1,1 +1,10 @@
-<side-menu [items]="menuItems"></side-menu>
+<div class="layout-row layout-padding">
+    <div class="flex">
+        <side-menu [items]="menuItems"></side-menu>
+    </div>
+    <div class="flex bgm-blue">
+        <side-menu [items]="menuItems" [alt]="true"></side-menu>
+    </div>
+</div>
+
+
