--- a/src/user-interface/side-menu/side-menu-item.component.pug
+++ b/src/user-interface/side-menu/side-menu-item.component.pug
@@ -1,7 +1,7 @@
-li.toggled(
+li(
     [ngClass]="{ 'active': active, 'toggled': expanded, 'sub-menu': item.children }", 
     (click)="onItemClicked($event)")
-    a(href='', (click)="$event.preventDefault()")
+    a(href='', (click)="$event.preventDefault()", [class.fc-alt]="alt")
         i(*ngIf="item.icon", class="zmdi zmdi-{{item.icon}}")
         | {{item.title}}
 
