--- a/src/scss/app/sidebar.scss
+++ b/src/scss/app/sidebar.scss
@@ -118,6 +118,16 @@
                     text-align: center;
                     padding: 8px 0;
                 }
+
+                &.fc-alt {
+                    color: $m-alt;
+                    background: transparent;
+
+                    &:hover {
+                        color: #262626;
+                        background-color: #f7f7f7;
+                    }
+                }
             }
 
             &.active {
