--- a/src/forms/input-base/input-base.component.pug
+++ b/src/forms/input-base/input-base.component.pug
@@ -17,7 +17,6 @@ include ../../mixins/base.pug
             [type]="inputType",
             placeholder="{{placeholder}}",
             [formControl]="control",
-            [disabled]="disabled",
             (focus)="onFocus(i)",
             (blur)="onBlur(i)")
 
@@ -27,4 +26,4 @@ include ../../mixins/base.pug
         +dynamic-icn('rightIcon')
 
     div(*ngIf="!control.valid && (control.dirty || fg.submitted)")
-        small.help-block.animated.fadeInDown(*ngFor="let v of validations", [class.hidden]="!control.errors[v.type]") {{v.message}}
+        small.help-block.animated.fadeInDown(*ngFor="let v of validations", [class.hidden]="!control.errors[v.type]") {{translate(v)}}
