--- a/src/forms/text-area/text-area.component.pug
+++ b/src/forms/text-area/text-area.component.pug
@@ -3,7 +3,7 @@
         [ngClass]="{ 'has-error': !control.valid && (fg.submitted || control.dirty)}")
     label(*ngIf="label") {{label}}
     .fg-line([class.disabled]="disabled", [class.fg-toggled]="toggled")
-        textarea.form-control.auto-size(#i, [attr.disabled]="disabled",
+        textarea.form-control.auto-size(#i,
             placeholder="{{placeholder}}", [formControl]="control",
             (focus)="onFocus(i)", (blur)="onBlur(i)", [attr.rows]="rows")
 
