added an input class to every component so custom classes can be injected

--- a/demo/components/demo/user-interface/card/card.html
+++ b/demo/components/demo/user-interface/card/card.html
@@ -1,7 +1,7 @@
 <div class="row">
 
     <div class="col-xs-12 col-sm-4">
-        <card>
+        <card class="some-class">
             <card-header [padded]="true" color="white">
                 <h2>Simple Card</h2>
                 <actions [actionItems]="actionItems"></actions>
