--- a/src/forms/input-base/input-base.component.pug
+++ b/src/forms/input-base/input-base.component.pug
@@ -1,6 +1,7 @@
 include ../../mixins/base.pug
 
 .input-group.m-b-15.w-100(
+    class="{{class}}",
     [class.fg-float]="floatingLabel",
     [class.fc-alt]="alt",
     [ngClass]="{ 'has-error': !control.valid && (fg.submitted || control.dirty)}")
