--- a/src/forms/radio/radio.component.pug
+++ b/src/forms/radio/radio.component.pug
@@ -1,4 +1,4 @@
-.radio.m-b-15([class.disabled]="disabled")
+.radio.m-b-15(class="{{class}}", [class.disabled]="disabled")
   label
     input(type='radio', [name]="groupName",
         [attr.value]="value",
