--- a/src/user-interface/actions/actions.component.pug
+++ b/src/user-interface/actions/actions.component.pug
@@ -1,5 +1,5 @@
 ul.actions(
-    class="c-{{color}}",
+    class="c-{{color}} {{class}}",
     [ngClass]="{ 'actions-alt': alt, 'dropdown': dropdown }",
     [class.actions]="!showBig",
     [class.top-menu]="showBig")
