--- a/src/user-interface/button/button.component.pug
+++ b/src/user-interface/button/button.component.pug
@@ -1,4 +1,4 @@
-button.btn.waves-effect(class="bgm-{{color}} c-{{simpleColor}} btn-{{size}}", type="{{type}}",
+button.btn.waves-effect(class="bgm-{{color}} c-{{simpleColor}} btn-{{size}} {{class}}", type="{{type}}",
     [class.btn-icon-text]="iconAndtext",
     [class.btn-block]="block",
     [class.waves-circle]="circular",
