--- a/src/forms/checkbox/checkbox.component.pug
+++ b/src/forms/checkbox/checkbox.component.pug
@@ -1,4 +1,4 @@
-.checkbox.m-b-25([class.fc-alt]="alt")
+.checkbox.m-b-25(class="{{class}}", [class.fc-alt]="alt")
     label
         input.form-control(type="checkbox", [formControl]="control")
         i.input-helper
