--- a/src/forms/toggle/toggle.component.pug
+++ b/src/forms/toggle/toggle.component.pug
@@ -1,4 +1,4 @@
-.toggle-switch([class.disabled]="disabled", [attr.data-ts-color]="color")
+.toggle-switch(class="{{class}}", [class.disabled]="disabled", [attr.data-ts-color]="color")
     label.ts-label([attr.for]='identifier') {{label}}
     input(
         [attr.id]="identifier",
