--- a/src/user-interface/preloader/preloader.component.pug
+++ b/src/user-interface/preloader/preloader.component.pug
@@ -1,3 +1,3 @@
-.preloader.pl-xxl(class="pls-{{color}}")
+.preloader.pl-xxl(class="pls-{{color}} {{class}}")
     svg.pl-circular(viewbox='25 25 50 50')
         svg:circle.plc-path(cx='50', cy='50', r='20')
