--- a/src/user-interface/tabset/tabset.component.pug
+++ b/src/user-interface/tabset/tabset.component.pug
@@ -1,4 +1,4 @@
-ul.tab-nav.tn-justified(role='tablist', (click)='$event.preventDefault()', [ngClass]="classMap", [class.ts-alt]="alt")
+ul.tab-nav.tn-justified(class="{{class}}", role='tablist', (click)='$event.preventDefault()', [ngClass]="classMap", [class.ts-alt]="alt")
     li.nav-item(
         *ngFor='let tabz of tabs', 
         [class.active]='tabz.active', 
