--- a/src/scss/app/form.scss
+++ b/src/scss/app/form.scss
@@ -76,6 +76,9 @@ input:focus {
 }
 
 .checkbox {
+    margin-top: 4px;
+    margin-bottom: 4px;
+    
     input {
         width: 17px;
         height: 17px;
