added two new inputs to the side menu, activeClass and activeIcon

--- a/src/user-interface/side-menu/side-menu-item.component.pug
+++ b/src/user-interface/side-menu/side-menu-item.component.pug
@@ -1,4 +1,5 @@
 li(
+    class="{{activeClass}}",
     [ngClass]="{ 'active': active, 'toggled': expanded, 'sub-menu': item.children }", 
     (click)="onItemClicked($event)")
     a(href='', (click)="$event.preventDefault()", [class.fc-alt]="alt")
