remove menu service from module provider

--- a/demo/components/demo/user-interface/side-menu/side-menu.html
+++ b/demo/components/demo/user-interface/side-menu/side-menu.html
@@ -1,9 +1,9 @@
 <div class="layout-row layout-padding">
     <div class="flex">
-        <side-menu [items]="menuItems"></side-menu>
+        <side-menu [items]="menuItems" activeIcon="check"></side-menu>
     </div>
     <div class="flex bgm-blue">
-        <side-menu [items]="menuItems" [alt]="true"></side-menu>
+        <side-menu [items]="menuItems2" [alt]="true"></side-menu>
     </div>
 </div>
 
