fixed an issue emitting the selected item on menu item output

--- a/src/user-interface/side-menu/side-menu-item.component.pug
+++ b/src/user-interface/side-menu/side-menu-item.component.pug
@@ -1,6 +1,6 @@
 li(
     class="{{activeClass}}",
-    [ngClass]="{ 'active': active, 'toggled': expanded, 'sub-menu': item.children }", 
+    [ngClass]="{ 'toggled': expanded, 'sub-menu': item.children }", 
     (click)="onItemClicked($event)")
     a(href='', (click)="$event.preventDefault()", [class.fc-alt]="alt")
         i(*ngIf="item.icon", class="zmdi zmdi-{{item.icon}}")
