first try with angular 4 and everything seems to be working fine. I just had to drop the small animation in the side menu

--- a/src/user-interface/side-menu/side-menu-item.component.pug
+++ b/src/user-interface/side-menu/side-menu-item.component.pug
@@ -6,7 +6,7 @@ li(
         i(*ngIf="item.icon", class="zmdi zmdi-{{item.icon}}")
         | {{item.title}}
 
-    ul([@isVisibleChanged]="expanded", *ngIf="item.children")
+    ul([class.hidden]="!expanded", *ngIf="item.children")
         side-menu-item(
             [item]="child", 
             *ngFor="let child of item.children")
